working on auth

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,10 @@
       </div>
     </div>
     <div align="center">
-      <button type="submit" class="btn btn-sm btn-success" data-toggle="modal" data-target=".success-modal-sm" (click)="pushNewResults(form101)">SUBMIT</button>
+      <button type="submit" class="btn btn-sm btn-success" data-toggle="modal" data-target=".success-modal-sm" (click)="pushNewResults(form101)">
+      <span class="glyphicon glyphicon-ok"></span>
+        SUBMIT
+      </button>
     </div>
   </form>
 </div>
