working on auth

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,15 +45,15 @@
   </tab>
 
   <tab heading="Survey102" disabled="true">
-    content  
+    content Survey102 
   </tab>
 
   <tab heading="Survey103" disabled="true">
-    content  
+    content Survey103
   </tab>
 
   <tab heading="Survey-n" disabled="true">
-    content  
+    content Survey-n
   </tab>
 </tabset>  
 </div>
