--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div align="center">
-        <button type="submit" class="btn btn-sm btn-success" data-toggle="modal" data-target=".success-modal-sm" (click)="pushNewResults(form101)">
+        <button type="submit" class="btn btn-sm btn-success" data-toggle="modal" data-target=".success-modal-sm" (click)="pushForm101(form101)">
         <span class="glyphicon glyphicon-ok"></span> 
           SUBMIT
         </button>
@@ -44,8 +44,28 @@
     </form>
   </tab>
 
-  <tab heading="Survey102" disabled="true">
-    content Survey102 
+  <tab heading="Survey102">
+    <form [formGroup]="form102" ngNativeValidate>
+      <div *ngFor="let items of jsonData2" class="container">
+        <div *ngFor="let items2 of items.question">
+          <label>{{items2.questionid}}. {{items2.questiondesc}}</label>
+          <div *ngFor="let items3 of items2.alloptions; let idx=index">
+            <div class="radio">
+              <input type="radio" name="question{{items2.questionid}}" [value]="items3.answer" formControlName="question{{items2.questionid}}" popover="click to choose" triggers="mouseenter:mouseleave" required/><b>{{items3.options}}</b>. {{items3.answer}} 
+            </div>
+            <!-- <select name="question{{items2.questionid}}">
+              <option value="{{items3.answer}}">{{items3.answer}}</option>
+            </select> -->
+          </div><br>
+        </div>
+      </div>
+      <div align="center">
+        <button type="submit" class="btn btn-sm btn-success" data-toggle="modal" data-target=".success-modal-sm" (click)=" pushForm102(form102)">
+        <span class="glyphicon glyphicon-ok"></span> 
+          SUBMIT
+        </button>
+      </div>
+    </form>
   </tab>
 
   <tab heading="Survey103" disabled="true">
