--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,11 @@ body
     align-items: center;
 }
 
+label
+{
+    font-size: 14pt;
+}
+
 td, th
 {
     text-align: center;
@@ -44,4 +49,15 @@ div
 {
     max-width: 35%;
     width: 35%;
+}
+
+.form-control
+{
+    width: 56%;
+    max-width: 56%;
+}
+
+.col-lg-6
+{
+    border: 1px solid black;
 }
